fixed uneven css

--- a/src/components/Donation/dynamicdropdown.css
+++ b/src/components/Donation/dynamicdropdown.css
@@ -39,11 +39,3 @@
     height: 30px;
     border: 1px solid grey;
 }
-
-#how-often{
-    position:relative;
-    top:50%; 
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 30px;
-}
