--- a/src/components/Donation/index.css
+++ b/src/components/Donation/index.css
@@ -150,3 +150,11 @@ html {
   #stepper{
     margin-bottom: 30px;
   }
+
+  #how-often{
+    position:relative;
+    top:50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 30px;
+}
